Fixed content footer curl display Kind of... There was a small tear (approx. 1px) in the butting of the c ontent and the footer curl. Shifted footer curl up by 1px to hide the tear.

--- a/styles.scss
+++ b/styles.scss
@@ -168,8 +168,8 @@ body::-webkit-scrollbar {
 .backgroundImage {
     position: relative;
     width: 100vw;
-    top: -20vw;
-    // height: auto;
+    top: -1px;
+    height: auto;
     // z-index: 2;
 }
 
